@startuml DeFi360 - Diagrama de Base de Datos
left to right direction
skinparam linetype ortho
skinparam entity {
  BackgroundColor #F0F7FF
  BorderColor #2C3E50
  HeaderBackgroundColor #1A3A5C
  HeaderFontColor #FFFFFF
  FontSize 11
}
skinparam arrow {
  Color #2C3E50
  FontSize 10
}

title DeFi360 — Base de Datos (reconciliada con V2__Schema_Release01.sql y modelos Sequelize)

' Nota: nombres de columnas en snake_case (Sequelize underscored: true).
' Tablas reales: users, wallets, offers, loans, tickets.

' ─────────────────────────────────────────
'  USERS
' ─────────────────────────────────────────
entity users {
  *id               : SERIAL (PK)
  --
  wallet_address    : VARCHAR(255) UNIQUE NULL
  email             : VARCHAR(255) UNIQUE NULL
  password_hash     : VARCHAR(255) NULL
  name              : VARCHAR(255) NULL
  role              : enum_users_role DEFAULT 'user'
  is_active         : BOOLEAN NOT NULL DEFAULT TRUE
  last_login        : TIMESTAMPTZ NULL
  created_at        : TIMESTAMPTZ NOT NULL DEFAULT NOW()
  updated_at        : TIMESTAMPTZ NOT NULL DEFAULT NOW()
}

' ─────────────────────────────────────────
'  WALLETS
' ─────────────────────────────────────────
entity wallets {
  *id               : SERIAL (PK)
  --
  #user_id          : INTEGER (FK → users.id) NOT NULL
  total_balance     : NUMERIC(20,2) DEFAULT 0
  available_balance : NUMERIC(20,2) DEFAULT 0
  blocked_balance   : NUMERIC(20,2) DEFAULT 0
  total_earned      : NUMERIC(20,2) DEFAULT 0
  created_at        : TIMESTAMPTZ NOT NULL DEFAULT NOW()
  updated_at        : TIMESTAMPTZ NOT NULL DEFAULT NOW()
}

' ─────────────────────────────────────────
'  OFFERS
' ─────────────────────────────────────────
entity offers {
  *id               : SERIAL (PK)
  --
  #user_id          : INTEGER (FK → users.id) NOT NULL
  type              : enum_offers_type NOT NULL
  amount            : NUMERIC(20,2) NOT NULL
  apy               : NUMERIC(5,2) NOT NULL
  duration          : INTEGER NOT NULL
  collateral_type   : VARCHAR(255) NULL
  collateral_amount : NUMERIC(20,2) NULL
  status            : enum_offers_status DEFAULT 'active'
  matched_with      : INTEGER NULL
  created_at        : TIMESTAMPTZ NOT NULL DEFAULT NOW()
  updated_at        : TIMESTAMPTZ NOT NULL DEFAULT NOW()
}

' ─────────────────────────────────────────
'  LOANS
' ─────────────────────────────────────────
entity loans {
  *id                        : SERIAL (PK)
  --
  #lender_id                 : INTEGER (FK → users.id) NOT NULL
  #borrower_id               : INTEGER (FK → users.id) NOT NULL
  #offer_id                  : INTEGER (FK → offers.id) NOT NULL
  amount                     : NUMERIC(20,2) NOT NULL
  apy                        : NUMERIC(5,2) NOT NULL
  rate_type                  : enum_loans_rate_type DEFAULT 'fixed'
  base_apy                   : NUMERIC(5,2) NULL
  rate_adjustment_period     : INTEGER NULL
  next_rate_adjustment_date  : TIMESTAMPTZ NULL
  duration                   : INTEGER NOT NULL
  ltv                        : NUMERIC(5,2) NULL
  remaining_balance          : NUMERIC(20,2) NOT NULL
  status                     : enum_loans_status DEFAULT 'active'
  start_date                 : TIMESTAMPTZ DEFAULT NOW()
  end_date                   : TIMESTAMPTZ NULL
  created_at                 : TIMESTAMPTZ NOT NULL DEFAULT NOW()
  updated_at                 : TIMESTAMPTZ NOT NULL DEFAULT NOW()
  --
  INDEX idx_prestamo_usuario_estado_fecha (borrower_id, status, end_date)
}

' ─────────────────────────────────────────
'  TICKETS
' ─────────────────────────────────────────
entity tickets {
  *id               : SERIAL (PK)
  --
  #user_id          : INTEGER (FK → users.id) NOT NULL
  ticket_number     : VARCHAR(255) UNIQUE NOT NULL
  subject           : VARCHAR(255) NOT NULL
  description       : TEXT NOT NULL
  priority          : enum_tickets_priority DEFAULT 'medium'
  status            : enum_tickets_status DEFAULT 'open'
  response          : TEXT NULL
  resolved_at       : TIMESTAMPTZ NULL
  created_at        : TIMESTAMPTZ NOT NULL DEFAULT NOW()
  updated_at        : TIMESTAMPTZ NOT NULL DEFAULT NOW()
}

' ─────────────────────────────────────────
'  RELACIONES (FKs reales)
' ─────────────────────────────────────────
users ||--o| wallets  : "hasOne (user_id)"
users ||--o{ offers   : "hasMany (user_id)"
users ||--o{ loans    : "lender_id (LentLoans)"
users ||--o{ loans    : "borrower_id (BorrowedLoans)"
offers ||--o{ loans   : "offer_id"
users ||--o{ tickets  : "hasMany (user_id)"

note as N1
  Decisión de alcance Release 01:
  el "colateral" se modela como atributos de
  offers/loans (collateral_type, collateral_amount, ltv),
  valorizados en tiempo de ejecución por CollateralService
  + priceOracle. NO existe tabla 'collateral' ni 'activo'.
end note

@enduml
